force-app/main/default/objects/Conflict_Check__c/Conflict_Check__c.object-meta.xml
<CustomObject>
    <label>Conflict Check</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Conflict Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflict Checks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>