force-app/main/default/objects/Conflict_Check__c/fields/Adverse_Parties__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Parties__c</fullName>
    <label>Adverse Parties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>