force-app/main/default/objects/Conflict_Check__c/fields/Any_other_special_billing_instructions__c.field-meta.xml
<CustomField>
    <fullName>Any_other_special_billing_instructions__c</fullName>
    <label>Any other special billing instructions?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>