force-app/main/default/objects/Conflict_Check__c/fields/Approved_Users__c.field-meta.xml
<CustomField>
    <fullName>Approved_Users__c</fullName>
    <label>Approved Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>