force-app/main/default/objects/Conflict_Check__c/fields/Area_of_Law_AOL__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Law_AOL__c</fullName>
    <label>Area of Law for file setup?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Board of Governors</fullName>
            </value>
            <value>
                <fullName>Cancellation Action</fullName>
            </value>
            <value>
                <fullName>Copyright</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Discipline</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Opinion</fullName>
            </value>
            <value>
                <fullName>Opposition</fullName>
            </value>
            <value>
                <fullName>Patent</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Post Grant Proceeding</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>