force-app/main/default/objects/Conflict_Check__c/fields/Brief_Description_of_Subject_Matter__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description_of_Subject_Matter__c</fullName>
    <label>Brief Description of Subject Matter</label>
    <length>555</length>
    <type>LongTextArea</type>
</CustomField>