force-app/main/default/objects/Conflict_Check__c/fields/CC_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Conflict Check Pending</fullName>
            </value>
            <value>
                <fullName>Conflict Check Completed</fullName>
            </value>
            <value>
                <fullName>Matter Created</fullName>
            </value>
            <value>
                <fullName>Conflict Check Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>