force-app/main/default/objects/Conflict_Check__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>SymphonyLF__Client__c</referenceTo>
    <relationshipLabel>Conflict Check Clients</relationshipLabel>
    <relationshipName>Conflict_Check_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>