force-app/main/default/objects/Conflict_Check__c/fields/Client_Relationship_with_related_parties__c.field-meta.xml
<CustomField>
    <fullName>Client_Relationship_with_related_parties__c</fullName>
    <label>Client Relationship with related parties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Assignor</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Licensor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>