force-app/main/default/objects/Conflict_Check__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <label>Contributors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>