force-app/main/default/objects/Conflict_Check__c/fields/Created_By_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Logged_in_User__c</fullName>
    <formula>IF( $User.Id = CreatedBy.Id,true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Logged in User</label>
    <type>Checkbox</type>
</CustomField>