force-app/main/default/objects/Conflict_Check__c/fields/Discuss_Count__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discuss Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>