force-app/main/default/objects/Conflict_Check__c/fields/Discuss_Needed_Users__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Needed_Users__c</fullName>
    <label>Discuss Needed Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>