force-app/main/default/objects/Conflict_Check__c/fields/Logged_in_User_is_Creator__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User_is_Creator__c</fullName>
    <formula>IF( $User.Id ==  CreatedById , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User is Creator?</label>
    <type>Checkbox</type>
</CustomField>