force-app/main/default/objects/Conflict_Check__c/fields/Logged_in_User_is_Originating_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User_is_Originating_Attorney__c</fullName>
    <formula>IF( $User.Id ==  Client_Name__r.Originating_Attorney__r.SymphonyLF__User__r.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User is Originating Attorney?</label>
    <type>Checkbox</type>
</CustomField>