force-app/main/default/objects/Conflict_Check__c/fields/Matter_Name__c.field-meta.xml
<CustomField>
    <fullName>Matter_Name__c</fullName>
    <label>Matter Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>