force-app/main/default/objects/Conflict_Check__c/fields/Matter_transferred_in_from_another_firm__c.field-meta.xml
<CustomField>
    <fullName>Matter_transferred_in_from_another_firm__c</fullName>
    <label>Matter transferred from another firm?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>