force-app/main/default/objects/Conflict_Check__c/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Client</label>
    <type>Checkbox</type>
</CustomField>