force-app/main/default/objects/Conflict_Check__c/fields/Related_Parties_other_than_client__c.field-meta.xml
<CustomField>
    <fullName>Related_Parties_other_than_client__c</fullName>
    <label>Related Parties other than client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>