force-app/main/default/objects/Conflict_Check__c/fields/Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>